--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,9 @@
 
 <form class="form-signin" #f="ngForm" (ngSubmit)="signIn(f.value)">
+    <div style="font-size:12px">
+        1234/1234 admin user <br/>
+        4321/4321 normal user
+    </div>
     <h2 class="form-signin-heading">Please sign in</h2>
     
     <div *ngIf="invalidLogin" class="alert alert-danger">
@@ -7,9 +11,32 @@
     </div>
   
     <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" name="email" ngModel class="form-control" placeholder="Email address" required autofocus>
+    <input type="email" 
+        id="inputEmail" 
+        #emailVar="ngModel"
+        name="email" 
+        ngModel 
+        class="form-control" 
+        placeholder="Email address" 
+        required 
+        autofocus>
+    <div *ngIf="emailVar.touched && emailVar.invalid" class="alert alert-danger">
+        email is required
+    </div>
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" name="password" ngModel class="form-control" placeholder="Password" required>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <input type="password" 
+        id="inputPassword" 
+        #passwordVar="ngModel"
+        name="password" 
+        ngModel 
+        class="form-control" 
+        placeholder="Password" 
+        required>
+    <div *ngIf="passwordVar.touched && passwordVar.invalid" class="alert alert-danger">
+        password is required
+    </div>
+    <button 
+        class="btn btn-lg btn-primary btn-block" 
+        type="submit"
+        [disabled]="f.invalid">Sign in</button>
   </form>
-  
